--- a/elt_pipeline/requirements.txt
+++ b/elt_pipeline/requirements.txt
@@ -1,12 +1,22 @@
-polars
-dagster-dbt
-SQLAlchemy
-pymysql==1.0.2
-cryptography==38.0.3
-pyarrow==11.0.0
-minio==7.1.13
+dagster==1.4.8
+dagster-cloud==1.4.8
+dagster-cloud-cli==1.4.8
+dagster-dbt==0.20.8
+dagster-graphql==1.4.8
+dagster-webserver==1.4.8
+dbt-core==1.3.0
+dbt-extractor==0.4.1
+dbt-postgres==1.3.0
+minio==7.1.16
+psycopg2-binary ==2.9.7
+cryptography==41.0.3
+pyarrow==13.0.0
+requests==2.31.0
+dagit
+dagster-postgres
+pymysql
 pytz==2022.7.1
-dagster==1.3.13
-dagit==1.3.13
-dagster-postgres==0.19.13
-pandas==1.5.3
+pandasql==0.7.3
+setuptools
+pandas
+sqlalchemy
