--- a/elt_pipeline/dbt_transform/dbt_project.yml
+++ b/elt_pipeline/dbt_transform/dbt_project.yml
@@ -34,5 +34,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_transform:
     # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    gold:
+      +materialized: table
+    movies_db:
+      +materialized: table
