--- a/elt_pipeline/requirements.txt
+++ b/elt_pipeline/requirements.txt
@@ -1,19 +1,25 @@
-dagster==1.4.8
-dagster-dbt==0.20.8
-dagster-webserver==1.4.8
-dbt-core==1.3.0
-dbt-extractor==0.4.1
-dbt-postgres==1.3.0
-minio==7.1.16
-psycopg2-binary ==2.9.7
-cryptography==41.0.3
-pyarrow==13.0.0
-requests==2.31.0
-dagit
-dagster-postgres
-pymysql
+pandas==1.5.3
+dagit==1.2.7
+dagster==1.2.7
+dagster-postgres==0.18.7
+dagster-dbt==0.18.7
+sqlalchemy==1.4.46 # or connectorx==0.3.1
+pymysql==1.0.2
+cryptography==38.0.3
+pyarrow==11.0.0
+fsspec==2023.3.0
+minio==7.1.13
+pyspark==3.3.2
+dbt-core==1.4.5
+dbt-postgres==1.4.5
 pytz==2022.7.1
-pandasql==0.7.3
-setuptools
-pandas
-sqlalchemy
+dagster-aws
+dagster-spark
+boto3==1.26.57
+s3fs==0.4.2
+pyspark==3.3.2
+
+
+
+
+
