--- a/elt_pipeline/Dockerfile
+++ b/elt_pipeline/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.9.17-slim
 
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
 USER root 
 
 
@@ -17,5 +19,5 @@ COPY requirements.txt /opt/dagster/app
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
 WORKDIR /opt/dagster/app
-COPY . /opt/dagster/app
+COPY . /opt/dagster/app/elt_pipeline
 CMD ["dagster", "api", "grpc", "-h", "0.0.0.0", "-p", "4000", "-m", "elt_pipeline"]
